--- a/.project
+++ b/.project
@@ -31,4 +31,11 @@
 		<nature>com.google.gwt.eclipse.core.gwtNature</nature>
 		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>test</name>
+			<type>2</type>
+			<location>M:/workspace/ProjetoGWT/test</location>
+		</link>
+	</linkedResources>
 </projectDescription>
