--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -7,6 +7,15 @@
 
   <!-- Servlets -->
   
+  <servlet>
+        <servlet-name>mySQLConnection</servlet-name>
+        <servlet-class>br.com.engswb.clinica.server.MySQLConnection</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>mySQLConnection</servlet-name>
+        <url-pattern>/clinica/MySQLConnection</url-pattern>
+    </servlet-mapping>
+  
   <!-- Default page to serve -->
   <welcome-file-list>
     <welcome-file>ClinicaMedica.html</welcome-file>
